--- a/haxball_site/templates/core/lives/lives_list.html
+++ b/haxball_site/templates/core/lives/lives_list.html
@@ -103,20 +103,23 @@
 
 {% block title %}Трансляции{% endblock %}
 {% block postlist %}
-<div class="card my-2"
-     style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
+    <div class="card my-2"
+         style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
 
-    <div class="card-body">
-        <h3 class="text-center mt-1 mb-0"><i class="fa fa-desktop" aria-hidden="true"></i>
-            Трансляции
-        </h3>
-        <hr>
+        <div class="card-body">
+            <h3 class="text-center mt-1 mb-0"><i class="fa fa-desktop" aria-hidden="true"></i>
+                Трансляции
+            </h3>
+            <hr>
 
-        {% for post in posts %}
+            {% for post in posts %}
                 {% include "core/include/post_in_list.html" with post=post %}
-        {% endfor %}
+            {% endfor %}
+
+        </div>
+        <div class="card-footer text-muted pb-0 pt-3">
+            {% include "core/include/pagination.html" with page=page_obj %}
+        </div>
 
     </div>
-
-</div>
 {% endblock %}
