--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -156,7 +156,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for player in team.players_in_team.all %}
+                            {% for player in team.players_in_team.all|sort_players %}
                                 <tr>
                                     <td class="text-left">
                                         {% if player.name %}
