--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -34,11 +34,9 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item submenu" href="#">Чемпионат России</a>
-                    <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's6-premier_league' %}">Единая лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's6-cup' %}">Кубок России</a>
 
-
-                    </div>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/213/reglament">Регламент</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/218/bron_hosta">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/219/perenosi">Переносы</a>
@@ -65,7 +63,8 @@
                     <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/46/season_1">ЧР #1</a>
                     <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/47/season_2">ЧР #2</a>
                     <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/48/season_3">ЧР #3</a>
-                    <a class="dropdown-item bg-primary" href="https://www.cis-haxball.com/post/50/champions_league_1">ЛЧ #1</a>
+                    <a class="dropdown-item bg-primary" href="https://www.cis-haxball.com/post/50/champions_league_1">ЛЧ
+                        #1</a>
 
                     <a class="dropdown-item bg-secondary" href="https://www.cis-haxball.com/post/49/season_4">ЧР #4</a>
                     <a class="dropdown-item submenu bg-secondary" href="#">ЧР #5</a>
