--- a/haxball_site/templates/tournament/hall_of_fame.html
+++ b/haxball_site/templates/tournament/hall_of_fame.html
@@ -7,7 +7,7 @@
         <div class="card-header pb-0" style="border-radius: 25px 25px 0 0">
 
             <h1 class="text-center">Зал славы</h1>
-                        <h6 class="text-center">брумасика</h6>
+            <h6 class="text-center">брумасика</h6>
 
         </div>
         <div class="card-body text-center p-0">
@@ -27,21 +27,15 @@
                                         title="Забито"></h5>
                             </div>
                             <div class="card-body p-0"
-                                 style="position: relative; height: 500px; overflow: auto;">
+                                 style="position: relative; height: 525px; overflow: auto;">
 
                                 <table class="table table-hover mb-0" style="border-radius: 25px">
                                     <tbody style="border-radius: 25px;">
                                     {% for pl in goalscorers %}
                                         <tr style="border-radius: 25px;">
-                                            <td width="16%" class="px-1" style="border-radius: 15px 0 0 15px;">
-                                                {% if pl.team %}
-                                                    <img
-                                                            src="{{ pl.team.logo.url }}" width="25px"
-                                                            height="25px">
-                                                {% else %}
-                                                    <img src="{% static "img/ico/free_player.png" %}" width="25px"
-                                                         height="25px">
-                                                {% endif %}
+                                            <td width="16%" class="px-1 font-weight-bold"
+                                                style="border-radius: 15px 0 0 15px;">
+                                                <h6>{{ forloop.counter }}</h6>
                                             </td>
                                             <td class="text-left pl-1">
                                                 {% if pl.name %}
@@ -75,7 +69,7 @@
                                          title="Передач"></h5>
                             </div>
                             <div class="card-body p-0"
-                                 style="position: relative; height: 500px; overflow: auto;">
+                                 style="position: relative; height: 525px; overflow: auto;">
 
                                 <table class="table table-hover mb-0" style="border-radius: 25px">
                                     <tbody style="border-radius: 25px;">
@@ -125,7 +119,7 @@
                                         title="Сухие"></h5>
                             </div>
                             <div class="card-body p-0"
-                                 style="position: relative; height: 500px; overflow: auto;">
+                                 style="position: relative; height: 525px; overflow: auto;">
 
                                 <table class="table table-hover mb-0" style="border-radius: 25px">
                                     <tbody style="border-radius: 25px;">
@@ -151,6 +145,134 @@
                                             </td>
                                             <td width="16%" style="border-radius: 0 15px 15px 0;"><span
                                                     class="font-weight-bold h6">{{ pl.event_c }}</span>
+                                            </td>
+
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="row mt-3">
+
+                    <div class="col-4 pr-0">
+                        <div class="card ml-1" style="border-radius: 25px;">
+                            <div class="card-header px-1"
+                                 style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                <h5 class="mb-0 font-weight-bold">Матчи <img
+                                        src="{% static "img/ico/matches_icon.png" %}" height="24"
+                                        width="24"
+                                        title="Забито"></h5>
+                            </div>
+                            <div class="card-body p-0"
+                                 style="position: relative; height: 525px; overflow: auto;">
+
+                                <table class="table table-hover mb-0" style="border-radius: 25px">
+                                    <tbody style="border-radius: 25px;">
+                                    {% for pl in player_matches %}
+                                        <tr style="border-radius: 25px;">
+                                            <td width="16%" class="px-1 font-weight-bolder text-success" style="border-radius: 15px 0 0 15px;">
+                                                {{ forloop.counter }}
+                                            </td>
+                                            <td class="text-left pl-1">
+                                                {% if pl.0.name %}
+                                                    <a class="text-dark h6"
+                                                       href="{{ pl.0.name.user_profile.get_absolute_url }}">{{ pl.0.nickname }}</a>
+                                                {% else %}
+                                                    <span class="text-secondary h6">{{ pl.0.nickname }}</span>
+                                                {% endif %}
+                                            </td>
+                                            <td width="16%" style="border-radius: 0 15px 15px 0;"><span
+                                                    class="font-weight-bold h6">{{ pl.1 }}</span>
+                                            </td>
+
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4 px-1">
+                        <div class="card mx-1" style="border-radius: 25px;">
+                            <div class="card-header"
+                                 style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                <h5 class="mb-0 font-weight-bold">Вышел на поле
+                                    <i class="fa fa-arrow-up text-success" title="Заменён" aria-hidden="true" style="font-size: 21px"></i>
+
+                                </h5>
+                            </div>
+                            <div class="card-body p-0"
+                                 style="position: relative; height: 525px; overflow: auto;">
+
+                                <table class="table table-hover mb-0" style="border-radius: 25px">
+                                    <tbody style="border-radius: 25px;">
+                                    {% for pl in subs_in %}
+                                        <tr style="border-radius: 25px;">
+                                            <td width="16%" class="px-1 font-weight-bolder text-success" style="border-radius: 15px 0 0 15px;">
+                                                {{ forloop.counter }}
+                                            </td>
+                                            <td width="68%" class="text-left pl-1">
+                                                {% if pl.0.name %}
+                                                    <a class="text-dark h6"
+                                                       href="{{ pl.0.name.user_profile.get_absolute_url }}">{{ pl.0.nickname }}</a>
+                                                {% else %}
+                                                    <span class="text-secondary h6">{{ pl.0.nickname }}</span>
+                                                {% endif %}
+                                            </td>
+                                            <td width="16%" style="border-radius: 0 15px 15px 0;"><span
+                                                    class="font-weight-bold h6">{{ pl.1 }}</span>
+                                            </td>
+
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-4 pl-0">
+                        <div class="card mr-1" style="border-radius: 25px;">
+                            <div class="card-header"
+                                 style="background: linear-gradient(to right, rgba(193, 243, 229, 0.7), rgba(91, 142, 241, 0.32)); border-radius: 25px 25px 0 0;">
+
+
+                                <h5 class="mb-0 font-weight-bold">Ушёл с поля
+                                    <i class="fa fa-arrow-down text-danger" title="Заменён" aria-hidden="true" style="font-size: 21px"></i>
+                                </h5>
+                            </div>
+                            <div class="card-body p-0"
+                                 style="position: relative; height: 525px; overflow: auto;">
+
+                                <table class="table table-hover mb-0" style="border-radius: 25px">
+                                    <tbody style="border-radius: 25px;">
+                                    {% for pl in subs_out %}
+                                        <tr style="border-radius: 25px;">
+                                            <td class="px-1 font-weight-bolder text-success" width="16%" style="border-radius: 15px 0 0 15px;">
+                                                {{ forloop.counter }}
+
+                                            </td>
+                                            <td class="text-left pl-1">
+                                                {% if pl.0.name %}
+                                                    <a class="text-dark h6"
+                                                       href="{{ pl.0.name.user_profile.get_absolute_url }}">{{ pl.0.nickname }}</a>
+                                                {% else %}
+                                                    <span class="text-secondary h6">{{ pl.0.nickname }}</span>
+                                                {% endif %}
+                                            </td>
+                                            <td width="16%" style="border-radius: 0 15px 15px 0;"><span
+                                                    class="font-weight-bold h6">{{ pl.1 }}</span>
                                             </td>
 
                                         </tr>
