--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -83,6 +83,11 @@
                 </div>
             </li>
 
+
+            <li class="nav-item">
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'tournament:hall_of_fame' %}">Зал славы</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1" href="{% url 'core:forum' %}">Форум</a>
             </li>
