--- a/haxball_site/templates/tournament/hall_of_fame.html
+++ b/haxball_site/templates/tournament/hall_of_fame.html
@@ -7,7 +7,6 @@
         <div class="card-header pb-0" style="border-radius: 25px 25px 0 0">
 
             <h1 class="text-center">Зал славы</h1>
-            <h6 class="text-center">брумасика</h6>
 
         </div>
         <div class="card-body text-center p-0">
@@ -35,8 +34,14 @@
                                         <tr style="border-radius: 25px;">
                                             <td width="16%" class="px-1 font-weight-bold"
                                                 style="border-radius: 15px 0 0 15px;">
-                                                <h6>{{ forloop.counter }}</h6>
-                                            </td>
+                                                {% if pl.team %}
+                                                    <img
+                                                            src="{{ pl.team.logo.url }}" width="25px"
+                                                            height="25px">
+                                                {% else %}
+                                                    <img src="{% static "img/ico/free_player.png" %}" width="25px"
+                                                         height="25px">
+                                                {% endif %}                                            </td>
                                             <td class="text-left pl-1">
                                                 {% if pl.name %}
                                                     <a class="text-dark h6"
@@ -177,8 +182,16 @@
                                     <tbody style="border-radius: 25px;">
                                     {% for pl in player_matches %}
                                         <tr style="border-radius: 25px;">
-                                            <td width="16%" class="px-1 font-weight-bolder text-success" style="border-radius: 15px 0 0 15px;">
-                                                {{ forloop.counter }}
+                                            <td width="16%" class="px-1 font-weight-bolder text-success"
+                                                style="border-radius: 15px 0 0 15px;">
+                                                {% if pl.0.team %}
+                                                    <img
+                                                            src="{{ pl.0.team.logo.url }}" width="25px"
+                                                            height="25px">
+                                                {% else %}
+                                                    <img src="{% static "img/ico/free_player.png" %}" width="25px"
+                                                         height="25px">
+                                                {% endif %}
                                             </td>
                                             <td class="text-left pl-1">
                                                 {% if pl.0.name %}
@@ -207,7 +220,8 @@
 
 
                                 <h5 class="mb-0 font-weight-bold">Вышел на поле
-                                    <i class="fa fa-arrow-up text-success" title="Заменён" aria-hidden="true" style="font-size: 21px"></i>
+                                    <i class="fa fa-arrow-up text-success" title="Заменён" aria-hidden="true"
+                                       style="font-size: 21px"></i>
 
                                 </h5>
                             </div>
@@ -218,8 +232,16 @@
                                     <tbody style="border-radius: 25px;">
                                     {% for pl in subs_in %}
                                         <tr style="border-radius: 25px;">
-                                            <td width="16%" class="px-1 font-weight-bolder text-success" style="border-radius: 15px 0 0 15px;">
-                                                {{ forloop.counter }}
+                                            <td width="16%" class="px-1 font-weight-bolder text-success"
+                                                style="border-radius: 15px 0 0 15px;">
+                                                {% if pl.0.team %}
+                                                    <img
+                                                            src="{{ pl.0.team.logo.url }}" width="25px"
+                                                            height="25px">
+                                                {% else %}
+                                                    <img src="{% static "img/ico/free_player.png" %}" width="25px"
+                                                         height="25px">
+                                                {% endif %}
                                             </td>
                                             <td width="68%" class="text-left pl-1">
                                                 {% if pl.0.name %}
@@ -249,7 +271,8 @@
 
 
                                 <h5 class="mb-0 font-weight-bold">Ушёл с поля
-                                    <i class="fa fa-arrow-down text-danger" title="Заменён" aria-hidden="true" style="font-size: 21px"></i>
+                                    <i class="fa fa-arrow-down text-danger" title="Заменён" aria-hidden="true"
+                                       style="font-size: 21px"></i>
                                 </h5>
                             </div>
                             <div class="card-body p-0"
@@ -259,9 +282,17 @@
                                     <tbody style="border-radius: 25px;">
                                     {% for pl in subs_out %}
                                         <tr style="border-radius: 25px;">
-                                            <td class="px-1 font-weight-bolder text-success" width="16%" style="border-radius: 15px 0 0 15px;">
-                                                {{ forloop.counter }}
+                                            <td class="px-1 font-weight-bolder text-success" width="16%"
+                                                style="border-radius: 15px 0 0 15px;">
 
+                                                {% if pl.0.team %}
+                                                    <img
+                                                            src="{{ pl.0.team.logo.url }}" width="25px"
+                                                            height="25px">
+                                                {% else %}
+                                                    <img src="{% static "img/ico/free_player.png" %}" width="25px"
+                                                         height="25px">
+                                                {% endif %}
                                             </td>
                                             <td class="text-left pl-1">
                                                 {% if pl.0.name %}
