--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -309,65 +309,95 @@
                     <div class="tab-pane fade" id="calendar" role="tabpanel" aria-labelledby="calendar-tab">
                         <div class="row">
                             <div class="col-12">
-                                {% for league in team|all_league %}
-                                    <p class="text-center mb-0">
-                                        <a href="{{ league.get_absolute_url }}"
-                                           class="h5 text-center">{{ league.title }}</a>
-                                    </p>
-                                    <table class="table table-borderless">
-                                        <tbody>
-                                        {% for match in team|team_matches_in_league:league %}
-                                            <tr>
-                                                <td class="text-left h6 p0" style="width: 10%;">
-                                                    {% if not league.is_cup %}
-                                                        Тур {{ match.numb_tour }}
-                                                    {% else %}
-                                                        <div style="text-align: center;">{{ match.numb_tour.number|round_name:league.tours.count }}</div>
-                                                    {% endif %}
-                                                </td>
-                                                <td class="text-right" style="width: 35%;">
-                                                    {% if team == match.team_home %}
-                                                        <span class="text-dark font-weight-bold h6">{{ match.team_home.title }}</span>
-                                                    {% else %}
-                                                        <a class="text-dark"
-                                                           href="{{ match.team_home.get_absolute_url }}">
-                                                            {{ match.team_home.title }}</a>
-                                                    {% endif %}
-                                                </td>
-                                                <td class="text-center" style="width: 10%;">
-                                                    {% if not match.is_played %}
 
-                                                        <a href="{{ match.get_absolute_url }}"><span
-                                                                class="h6">vs</span>
-                                                        </a>
-                                                    {% else %}
-                                                        <a href="{{ match.get_absolute_url }}"
-                                                           class="h6">{{ match.score_home }}
-                                                            : {{ match.score_guest }}</a>
-                                                    {% endif %}
-                                                </td>
-                                                <td class="text-left" style="width: 35%;">
-                                                    {% if team == match.team_guest %}
-                                                        <span class="text-dark font-weight-bold h6">{{ match.team_guest.title }}</span>
-                                                    {% else %}
-                                                        <a class="text-dark"
-                                                           href="{{ match.team_guest.get_absolute_url }}"
-                                                           class="h6">{{ match.team_guest.title }}</a>
-                                                    {% endif %}
-                                                </td>
-                                                <td style="width: 10%;">
+                                <div class="tab-pane fade show active pr-2" id="matches" role="tabpanel"
+                                     aria-labelledby="shedule-tab">
 
-                                                </td>
-                                            </tr>
+                                    <ul class="nav nav-pills nav-fill" id="seasons-list" style="width: 100%;">
+                                        {% for season in team|all_seasons %}
+                                            <li class="nav-item" style="width: 33%;">
+                                                <a class="nav-link h5 {% if forloop.first %}active{% endif %}"
+                                                   id="season-{{ season.id }}-tab" data-toggle="tab"
+                                                   href="#season{{ season.id }}"
+                                                   role="tab"
+                                                   aria-controls="shedule-{{ season.id }}-tab"
+                                                   {% if forloop.first %}aria-selected="true"
+                                                   {% else %}aria-selected="false"{% endif %}>
+                                                    {{ season }}</a>
+                                            </li>
                                         {% endfor %}
-                                        </tbody>
-                                    </table>
-
-                                {% endfor %}
+                                    </ul>
+                                </div>
                             </div>
-
-
                         </div>
+
+                        <div class="tab-content" id="seasons-switch">
+
+                            {% for season in team|all_seasons %}
+
+                                <div class="tab-pane fade {% if forloop.first %}show active{% endif %}"
+                                     id="season{{ season.id }}" role="tabpanel"
+                                     aria-labelledby="shedule-{{ season.id }}-tab">
+
+                                    {% for league in team|all_league_season:season %}
+                                        <p class="text-center mb-0">
+                                            <a href="{{ league.get_absolute_url }}"
+                                               class="h5 text-center">{{ league.title }}</a>
+                                        </p>
+                                        <table class="table table-borderless">
+                                            <tbody>
+                                            {% for match in team|team_matches_in_league:league %}
+                                                <tr>
+                                                    <td class="text-left h6 p0" style="width: 10%;">
+                                                        {% if not league.is_cup %}
+                                                            Тур {{ match.numb_tour }}
+                                                        {% else %}
+                                                            <div style="text-align: center;">{{ match.numb_tour.number|round_name:league.tours.count }}</div>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td class="text-right" style="width: 35%;">
+                                                        {% if team == match.team_home %}
+                                                            <span class="text-dark font-weight-bold h6">{{ match.team_home.title }}</span>
+                                                        {% else %}
+                                                            <a class="text-dark"
+                                                               href="{{ match.team_home.get_absolute_url }}">
+                                                                {{ match.team_home.title }}</a>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td class="text-center" style="width: 10%;">
+                                                        {% if not match.is_played %}
+
+                                                            <a href="{{ match.get_absolute_url }}"><span
+                                                                    class="h6">vs</span>
+                                                            </a>
+                                                        {% else %}
+                                                            <a href="{{ match.get_absolute_url }}"
+                                                               class="h6">{{ match.score_home }}
+                                                                : {{ match.score_guest }}</a>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td class="text-left" style="width: 35%;">
+                                                        {% if team == match.team_guest %}
+                                                            <span class="text-dark font-weight-bold h6">{{ match.team_guest.title }}</span>
+                                                        {% else %}
+                                                            <a class="text-dark"
+                                                               href="{{ match.team_guest.get_absolute_url }}"
+                                                               class="h6">{{ match.team_guest.title }}</a>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td style="width: 10%;">
+
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    {% endfor %}
+                                </div>
+                            {% endfor %}
+                        </div>
+
 
                     </div>
 
