--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -85,7 +85,7 @@
 
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1" href="{% url 'tournament:hall_of_fame' %}">Зал славы</a>
+                <a class="nav-link font-weight-bold text-warning mx-1" href="{% url 'tournament:hall_of_fame' %}">Зал славы</a>
             </li>
 
             <li class="nav-item">
