--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -20,7 +20,7 @@
 
 <nav class="navbar navbar-expand-xl bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top p-1">
     <!-- Brand -->
-    <a class="navbar-brand font-weight-bold ml-2" href="{% url 'core:home' %}">Главная</a>
+    <a class="navbar-brand font-weight-bold ml-2" href="{% url 'core:home' %}"><img src="{% static "img/logo_try.png" %}" width="30" height="30" alt="Главная"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
