--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -28,6 +28,10 @@ p {
     max-width: 100%;
 }
 
+.comment-body p iframe {
+    max-width: 100%;
+}
+
 .comment-widgets .comment-row {
     border-bottom: 1px solid rgba(120, 130, 140, 0.13);
     padding: 15px;
