--- a/haxball_site/templates/core/admins/admin_list.html
+++ b/haxball_site/templates/core/admins/admin_list.html
@@ -24,46 +24,61 @@
             <h4>Господин waff вопросами чемпионата НЕ ЗАНИМАЕТСЯ!</h4>
             <hr>
 
-            {% for user in users %}
-                <h4>
-                    <a href="{{ user.user_profile.get_absolute_url }}">
-                        {% for icon in user.user_profile.user_icon.all %}
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col">Контакты</th>
+                    <th scope="col">Должность</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                    <tr>
+                        <th scope="row">{% for icon in user.user_profile.user_icon.all %}
                             {% if icon %}
                                 <img src="{{ icon.image.url }}" width="20px" height="20px"
                                      title="{{ icon.description }}">
                             {% endif %}
-                        {% endfor %}{{ user.username }}
-                        {% if user.user_profile.vk %}
-                            <a href="https://vk.com/{{ user.user_profile.vk }}"
-                               target="_blank"><img
-                                    src="{% static "img/ico/vk_1.png" %}" height="30" width="30"
-                                    title="{{ user.user_profile.vk }}"></a>
-                        {% endif %}
-                        {% if user.user_profile.discord %}
-                            <img src='{% static "img/ico/discord_1.png" %}'
-                                 onclick="myFunction(this)"
-                                 height="30" width="30"
-                                 title="{{ user.user_profile.discord }}"
-                                 style="cursor: pointer;">
-                        {% endif %}
-                        {% if user.user_profile.telegram %}
-                            <a href="https://t.me/{{ user.user_profile.telegram }}"
-                               target="_blank"><img
-                                    src="{% static "img/ico/tg_1.png" %}" height="30" width="30"
-                                    title="{{ user.user_profile.telegram }}"></a>
-                        {% endif %}
-                        {% if not user.user_profile.vk and not user.user_profile.discord and not user.user_profile.telegram %}
-                            <i class="fa fa-minus text-danger text-center" aria-hidden="true"></i>
-                        {% endif %}
-                    </a>
-                    <span class="small text-muted">
-                            {% for group in user.groups.all %}
-                                {{ group.name }}
-                            {% endfor %}
-                        </span>
-                </h4>
+                        {% endfor %}
+                        </th>
+                        <td><a href="{{ user.user_profile.get_absolute_url }}">{{ user.username }}</a></td>
+                        <td>
+                            {% if user.user_profile.vk %}
+                                <a href="https://vk.com/{{ user.user_profile.vk }}"
+                                   target="_blank"><img
+                                        src="{% static "img/ico/vk_1.png" %}" height="30" width="30"
+                                        title="{{ user.user_profile.vk }}"></a>
+                            {% endif %}
+                            {% if user.user_profile.discord %}
+                                <img src='{% static "img/ico/discord_1.png" %}'
+                                     onclick="myFunction(this)"
+                                     height="30" width="30"
+                                     title="{{ user.user_profile.discord }}"
+                                     style="cursor: pointer;">
+                            {% endif %}
+                            {% if user.user_profile.telegram %}
+                                <a href="https://t.me/{{ user.user_profile.telegram }}"
+                                   target="_blank"><img
+                                        src="{% static "img/ico/tg_1.png" %}" height="30" width="30"
+                                        title="{{ user.user_profile.telegram }}"></a>
+                            {% endif %}
+                            {% if not user.user_profile.vk and not user.user_profile.discord and not user.user_profile.telegram %}
+                                <i class="fa fa-minus text-danger text-center" aria-hidden="true"></i>
+                            {% endif %}
+                        </td>
+                        <td> {% for group in user.groups.all %}
+                            {{ group.name }}
+                        {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
 
-            {% endfor %}
+                </tbody>
+            </table>
+
+           
 
         </div>
 
